# yozh_task

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Task_Management_API.postman_collection.json  Task_Management_API_Local.postman_environment.json  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml  test.yml
alembic/: env.py
alembic/versions/: 733866945380_initial.py
app/: config.py  database.py  main.py
app/api/: auth.py  comment.py  task.py  user.py
app/core/: crud_user.py  security.py
app/models/: comment.py  task.py  user.py
app/schemas/: comment.py  task.py  user.py
app/tests/: conftest.py  test_auth.py  test_comments.py  test_tasks.py  test_users.py
